style changes on footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Ergoproject</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.css">
   <link rel="stylesheet" href="style.css">
 
   <!-- JAVASCRIPT
@@ -70,8 +71,8 @@
 	</header>	
 	<div id="owl-demo" class="owl-carousel owl-theme">
  
-	  <div class="item"><img src="images/porto.png" alt="porto"></div>
-	  <div class="item"><img src="images/construction.jpg" alt="andaimes"></div>
+	  <div class="item"><div class="textoverlay"><h1>Consultoria em Engenharia</h1></div><img src="images/porto.png" alt="porto"></div>
+	  <div class="item"><div class="textoverlay"><h1>Text 1</h1><p>Some text bla bla bla</p></div><img src="images/construction.jpg" alt="andaimes"></div>
 	 
 	</div>
 	<div class="container">
@@ -80,7 +81,7 @@
 				<div class="about-section__picture1 about-section__content"></div>
 				<div class="about-section__subject">Sobre nós</div>
 				<div class="about-section__description">
-					A ERGOPROJECT-CONSULTORES ASSOCIADOS, LDA, É SÓCIA DA ASSOCIAÇÃO PORTUGUESA DE PROJECTISTAS E CONSULTORES, TEM NOS SEUS QUADROS PROFISSIONAIS LIGADOS AO CAE 71-ACTIVIDADES DE ARQUITETURA, DE ENGENHARIA E TÉCNICAS AFINS; ACTIVIDADES DE ENSAIOS E DE ANÁLISES TÉCNICAS.
+					A ERGOPROJECT-CONSULTORES ASSOCIADOS, LDA, é sócia da associação portuguesa de projectistas e consultores...
 				</div>
 			</div>
 			<div class="four columns">
@@ -111,9 +112,9 @@
 			</div>	
 			<div class="section__line"></div>
 			<div class="section__services">
-				<div class="four columns section__service1"></div>
-				<div class="four columns section__service2"></div>
-				<div class="four columns section__service3"></div>
+				<div class="four columns section__service1"><div class="section__service-title">Engenharia Civil</div></div>
+				<div class="four columns section__service2"><div class="section__service-title">Engenharia Mecânica</div></div>
+				<div class="four columns section__service3"><div class="section__service-title">Engenharia Electrotécnica</div></div>
 			</div>
 		</div>
 		<hr />
@@ -154,12 +155,29 @@
 			</div>
 			<div class="four columns">
 				<div class="footer__nav">
-					<div class="footer__title">NAVEGAÇÃO</div>
+					<div class="footer__title">INFORMAÇÃO</div>
+					<div class="footer__info">Organização</div>
+					<div class="footer__info">Projectos</div>
+					<div class="footer__info">Consultoria</div>
 				</div>
 			</div>
 			<div class="four columns">
 				<div class="footer__contacts">
 					<div class="footer__title">CONTACTOS</div>
+					<div class="footer__address">Praça Mouzinho de Albuquerque,</div>
+					<div class="footer__address">Nº113, 5º andar</div>
+					<div class="footer__address">4100-359 Porto</div>
+					<div class="footer__numbers">
+						<div class="footer__phone">
+							Telefone:  +351 220 902 567
+						</div>
+						<div class="footer__phone">
+							Telemóvel:  +351 962 913 104
+						</div>
+						<div class="footer__phone">
+							E-mail:  porto@ergoproject.pt
+						</div>
+					</div>	
 				</div>
 			</div>
 		</div>	
