--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 	</header>	
 	<div id="owl-demo" class="owl-carousel owl-theme">
  
-	  <div class="item"><div class="textoverlay"><h1>Consultoria em Engenharia</h1></div><img src="images/porto.png" alt="porto"></div>
-	  <div class="item"><div class="textoverlay"><h1>Text 1</h1><p>Some text bla bla bla</p></div><img src="images/construction.jpg" alt="andaimes"></div>
+	  <div class="item"><div class="textoverlay"><h2>Consultoria em Engenharia</h2></div><img src="images/porto.png" alt="porto"></div>
+	  <div class="item"><div class="textoverlay"><h2>Text 1</h2></div><img src="images/construction.jpg" alt="andaimes"></div>
 	 
 	</div>
 	<div class="container">
