--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="navbar">
-					<div class="three columns">
-						<div class="navbar__brand">
-							ERGOPROJECT
-						</div>	
-					</div>	
+				
+				<nav class="navbar">
+					<div class="three columns navbar__brand">
+						ERGOPROJECT
+					</div>
 					<div class="nine columns navbar__right">
 						<div class="twelve columns navbar__top">
 							<div class="navbar__slogan">
@@ -64,14 +63,17 @@
 								<div class="nav__item">Contactos</div>
 							</div>
 						</div>
-					</div>	
-				</div>	
+					</div>
+				</nav>		
 			</div>
 		</div>	
 	</header>	
 	<div id="owl-demo" class="owl-carousel owl-theme">
  
-	  <div class="item"><div class="textoverlay"><h2>Consultoria em Engenharia</h2></div><img src="images/porto.png" alt="porto"></div>
+	  <div class="item"><div class="textoverlay">
+	  	<h2>Consultoria em Engenharia</h2>
+	  	<div class="primary-btn position">os nossos serviços</div><div class="secondary-btn position">contacte-nos</div>
+	  </div><img src="images/porto.png" alt="porto"></div>
 	  <div class="item"><div class="textoverlay"><h2>Text 1</h2></div><img src="images/construction.jpg" alt="andaimes"></div>
 	 
 	</div>
