add other pages

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 						</div>
 						<div class="twelve columns">
 							<div class="nav">
-								<div class="nav__item">Organização</div>
-								<div class="nav__item">Consultoria</div>
-								<div class="nav__item">Projectos</div>
-								<div class="nav__item">Contactos</div>
+								<a class="nav__item" href="organizacao.html">Organização</a>
+								<a class="nav__item" href="consultoria.html">Consultoria</a>
+								<a class="nav__item" href="projectos.html">Projectos</a>
+								<a class="nav__item" href="contactos.html">Contactos</a>
 							</div>
 						</div>
 					</div>
@@ -129,17 +129,18 @@
 				<div class="four columns section__news-item">
 					<div class="section__news-photo1"></div>
 					<div class="section__news-title">Titulo</div>
-					<div class="section__news-title">data</div>
+					<div class="section__news-date">data</div>
 				</div>
 				<div class="four columns section__new-item">
 					<div class="section__news-photo2"></div>
 					<div class="section__news-title">Titulo</div>
-					<div class="section__news-title">data</div>
+					<div class="section__news-date">data</div>
 				</div>
 				<div class="four columns section__news-item">
 					<div class="section__news-photo3"></div>
 					<div class="section__news-title">Titulo</div>
-					<div class="section__news-title">data</div>
+					<div class="section__news-date">data</div>
+
 				</div>
 			</div>
 		</div>
