--- a/projectos.html
+++ b/projectos.html
@@ -41,7 +41,7 @@
         
         <nav class="navbar">
           <div class="three columns navbar__brand">
-            ERGOPROJECT
+            <a href="index.html">ERGOPROJECT</a>
           </div>
           <div class="nine columns navbar__right">
             <div class="twelve columns navbar__top">
