--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 			<div class="four columns">
 				<div class="footer__nav">
 					<div class="footer__title">INFORMAÇÃO</div>
-					<div class="footer__info">Organização</div>
-					<div class="footer__info">Projectos</div>
-					<div class="footer__info">Consultoria</div>
+					<div class="footer__info"><span class="icon-arrow-point-to-right"></span>Organização</div>
+					<div class="footer__info"><span class="icon-arrow-point-to-right"></span>Projectos</div>
+					<div class="footer__info"><span class="icon-arrow-point-to-right"></span>Consultoria</div>
 				</div>
 			</div>
 			<div class="four columns">
