--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<a class="nav__item" href="projectos.html">Projectos</a>
 								<a class="nav__item" href="contactos.html">Contactos</a>
 								<div class="nav__item">
-									<input type="text" class="nav__search"><span class="icon-search"></span>
+									<input type="text" class="nav__search"><span class="icon-search js-search"></span>
 								</div>
 							</div>
 						</div>
@@ -143,15 +143,21 @@
 			<div class="section__services">
 				<div class="four columns section__service1">
 					<div class="section__service-title">Engenharia Civil</div>
-					<a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+					<div class="section__service-link">
+						<a class="link__know-more" href="organizacao.html#servicos">saiba mais <span class="icon-arrow-right2"></span></a>
+					</div>	
 				</div>
 				<div class="four columns section__service2">
 					<div class="section__service-title">Engenharia Mecânica</div>
-					<a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+					<div class="section__service-link">
+						<a class="link__know-more" href="organizacao.html#servicos">saiba mais <span class="icon-arrow-right2"></span></a>
+					</div>	
 				</div>
 				<div class="four columns section__service3">
 					<div class="section__service-title">Engenharia Electrotécnica</div>
-					<a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+					<div class="section__service-link">
+						<a class="link__know-more" href="organizacao.html#servicos">saiba mais <span class="icon-arrow-right2"></span></a>
+					</div>	
 				</div>
 			</div>
 		</div>
@@ -197,9 +203,9 @@
 			<div class="four columns">
 				<div class="footer__nav">
 					<div class="footer__title">INFORMAÇÃO</div>
-					<div class="footer__info"><span class="icon-arrow-point-to-right"></span>Organização</div>
-					<div class="footer__info"><span class="icon-arrow-point-to-right"></span>Projectos</div>
-					<div class="footer__info"><span class="icon-arrow-point-to-right"></span>Consultoria</div>
+					<div class="footer__info"><span class="footer__arrow icon-arrow-point-to-right"></span><a href="organizacao.html">Organização</a></div>
+					<div class="footer__info"><span class="footer__arrow icon-arrow-point-to-right"></span><a href="projectos.html">Projectos</a></div>
+					<div class="footer__info"><span class="footer__arrow icon-arrow-point-to-right"></span><a href="consultoria.html">Consultoria</a></div>
 				</div>
 			</div>
 			<div class="four columns">
