--- a/projecto1.html
+++ b/projecto1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <!-- Basic Page Needs
+	<!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Ergoproject</title>
@@ -72,50 +72,22 @@
   <div class="container main-section">
     <div class="row section">
       <div class="section__title">
-        Organização
+        Projecto: Estruturas em Betão
       </div>  
       <div class="section__line"></div>
-      <div class="section__organization">
-        <div class="company">
-          <div class="twelve columns">
-            <div class="icon__circle">
-              <span class="organization-icon icon-theater"></span>
-            </div>
-            <div class="title">Sobre nós</div>
+      <div class="section__project">
+        <div class="twelve columns">
+          <div class="eight columns">
+            <div class="image" style="background-image:url(images/house1.jpg)"></div>
           </div>
-          <div class="twelve columns">
-            <p class="company__text">Curabitur sed metus a augue feugiat pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Quisque sit amet ipsum ligula.</p>
-            <p class="company__text">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Suspendisse varius, ligula sed interdum mollis, metus libero malesuada arcu, non condimentum neque sapien in dolor.</p>
-          </div>  
-        </div>
-        <div class="services" id="servicos">
-          <div class="twelve columns">
-            <div class="icon__circle">
-              <span class="organization-icon icon-handyman-tools"></span>
-            </div>
-            <div class="title">Os nossos serviços</div>
+          <div class="four columns">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
           </div>
-          <div class="twelve columns services__container">
-            <div class="four columns">
-              <div class="service-title">Engenharia Civil</div>
-              <div class="service-text">Etiam pharetra nunc dui, eu hendrerit sem ultrices eget. Morbi pellentesque mi sodales, varius ipsum ac, ultrices lectus.</div>
-            </div>  
-            <div class="four columns">
-              <div class="service-title">Engenharia Mecânica</div>
-              <div class="service-text">Etiam pharetra nunc dui, eu hendrerit sem ultrices eget. Morbi pellentesque mi sodales, varius ipsum ac, ultrices lectus.</div>
-            </div>
-            <div class="four columns">
-              <div class="service-title">Engenharia Electrotécnica</div>
-              <div class="service-text">Etiam pharetra nunc dui, eu hendrerit sem ultrices eget. Morbi pellentesque mi sodales, varius ipsum ac, ultrices lectus.</div>
-            </div>
-          </div>
-        </div>
-        <div class="whyus">
-        </div>  
-      </div>
+        </div> 
+      </div>  
     </div>
-  </div>
-  </body>
+  </div>    
+</body>
 <footer class="footer">
   <div class="container">
     <div class="row">
@@ -156,4 +128,4 @@
     </div>  
   </div>
 </footer>
-</html>      
+</html>  
