--- a/projectos.html
+++ b/projectos.html
@@ -23,11 +23,13 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/owl.carousel.css">
   <link rel="stylesheet" href="css/owl.theme.css">
+  <link rel="stylesheet" href="css/icomoon/style.css">
   <link rel="stylesheet" href="style.css">
 
   <!-- JAVASCRIPT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="js/jquery-3.1.0.min.js"></script>
+   <script src="js/jquery-ui.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 
@@ -67,6 +69,68 @@
       </div>
     </div>  
   </header> 
+  <div class="container main-section">
+    <div class="row section">
+      <div class="section__title">
+        Os nossos projectos
+      </div>  
+      <div class="section__line"></div>
+      <div class="section__projects">
+        <div class="four columns">
+          <div class="project" style="background-image:url(images/house1.jpg);">
+            <div class="after"></div>
+            <div class="project__title">Estruturas em Betão</div>
+            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__link">
+              <a class="link__know-more" href="projecto1.html">saiba mais <span class="icon-arrow-right2"></span></a>
+            </div>  
+          </div>  
+        </div>  
+        <div class="four columns">
+          <div class="project" style="background-image:url(images/house2.jpg);">
+            <div class="after"></div>
+            <div class="project__title">Estruturas Metálicas</div>
+            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__link">
+              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+            </div>  
+          </div> 
+        </div>  
+        <div class="four columns">
+          <div class="project" style="background-image:url(images/house3.jpg);">
+            <div class="after"></div>
+            <div class="project__title">Reabilitação Urbana</div>
+            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__link">
+              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+            </div> 
+          </div> 
+        </div>  
+      </div> 
+      <div class="section__projects">
+        <div class="four columns">
+          <div class="project" style="background-image:url(images/house1.jpg);">
+            <div class="after"></div>
+            <div class="project__title">Águas Prediais e Residuais</div>
+            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__link">
+              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+            </div>  
+          </div>  
+        </div>  
+        <div class="four columns">
+          <div class="project" style="background-image:url(images/house2.jpg);">
+            <div class="after"></div>
+            <div class="project__title">AVAC</div>
+            <div class="project__location">Porto, Matosinhos</div>
+            <div class="project__link">
+              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+            </div>  
+          </div>
+        </div>
+      </div>     
+    </div> 
+  </div>  
 </body>
 <footer class="footer">
   <div class="container">
@@ -81,9 +145,9 @@
       <div class="four columns">
         <div class="footer__nav">
           <div class="footer__title">INFORMAÇÃO</div>
-          <div class="footer__info">Organização</div>
-          <div class="footer__info">Projectos</div>
-          <div class="footer__info">Consultoria</div>
+          <div class="footer__info"><span class="footer__arrow icon-arrow-point-to-right"></span><a href="organizacao.html">Organização</a></div>
+          <div class="footer__info"><span class="footer__arrow icon-arrow-point-to-right"></span><a href="projectos.html">Projectos</a></div>
+          <div class="footer__info"><span class="footer__arrow icon-arrow-point-to-right"></span><a href="consultoria.html">Consultoria</a></div>
         </div>
       </div>
       <div class="four columns">
