--- a/organizacao.html
+++ b/organizacao.html
@@ -77,21 +77,21 @@
       <div class="section__line"></div>
       <div class="section__organization">
         <div class="company">
-          <div class="twelve columns">
+          <div class="twelve columns about-us">
             <div class="icon__circle">
-              <span class="organization-icon icon-theater"></span>
+              <span class="section-icon icon-theater"></span>
             </div>
             <div class="title">Sobre nós</div>
           </div>
           <div class="twelve columns">
-            <p class="company__text">Curabitur sed metus a augue feugiat pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Quisque sit amet ipsum ligula.</p>
-            <p class="company__text">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Suspendisse varius, ligula sed interdum mollis, metus libero malesuada arcu, non condimentum neque sapien in dolor.</p>
+            <p class="section-text">Curabitur sed metus a augue feugiat pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nulla facilisi. Quisque sit amet ipsum ligula.</p>
+            <p class="section-text">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse potenti. Suspendisse varius, ligula sed interdum mollis, metus libero malesuada arcu, non condimentum neque sapien in dolor.</p>
           </div>  
         </div>
         <div class="services" id="servicos">
           <div class="twelve columns">
             <div class="icon__circle">
-              <span class="organization-icon icon-handyman-tools"></span>
+              <span class="section-icon icon-handyman-tools"></span>
             </div>
             <div class="title">Os nossos serviços</div>
           </div>
