--- a/projecto2.html
+++ b/projecto2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <!-- Basic Page Needs
+	<!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Ergoproject</title>
@@ -72,46 +72,21 @@
   <div class="container main-section">
     <div class="row section">
       <div class="section__title">
-        Consultoria
+        Projecto: Estruturas Metálicas
       </div>  
       <div class="section__line"></div>
-      <div class="section__consultancy">
-        <p class="section-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec viverra libero, viverra congue justo. Suspendisse nec purus ultricies, feugiat ante sit amet, molestie orci. Donec tincidunt eros euismod velit convallis mattis.</p>
-        <div class="sub-section">
-          <div class="twelve columns">
-            <div class="icon__circle">
-              <span class="section-icon icon-about-us"></span>
-            </div>
-            <div class="title">Fiscalização de Obras</div>
+      <div class="section__project">
+        <div class="twelve columns">
+          <div class="eight columns">
+            <div class="image" style="background-image:url(images/house2.jpg)"></div>
           </div>
-          <div class="twelve columns">
-            <p class="section-text">Praesent pharetra nec sem nec vehicula. Duis faucibus lacus dictum, convallis risus ut, blandit ex. Praesent ut varius neque. Integer sodales nulla mauris, ut semper ligula rutrum vitae.</p>
-            <ul>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-            </ul>  
-          </div>  
-        </div>
-        <div class="sub-section">
-          <div class="twelve columns">
-            <div class="icon__circle">
-              <span class="section-icon-shield icon-shield2"></span>
-            </div>
-            <div class="title">Segurança</div>
+          <div class="four columns">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris odio mauris, sodales nec tincidunt volutpat, hendrerit ut ipsum. Phasellus tincidunt sagittis tincidunt. Vestibulum quis nunc quam. Phasellus non aliquam purus. Aenean pharetra maximus neque ut rutrum. 
           </div>
-          <div class="twelve columns">
-            <p class="section-text">Praesent pharetra nec sem nec vehicula. Duis faucibus lacus dictum, convallis risus ut, blandit ex. Praesent ut varius neque. Integer sodales nulla mauris, ut semper ligula rutrum vitae.</p>
-            <ul>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-              <li>Morbi posuere iaculis cursus. In tincidunt risus vitae dapibus efficitur. </li>
-            </ul>  
-          </div>
-        </div>  
-      </div>
+        </div> 
+      </div>  
     </div>
-  </div>
+  </div>    
 </body>
 <footer class="footer">
   <div class="container">
@@ -153,4 +128,4 @@
     </div>  
   </div>
 </footer>
-</html>        
+</html>  
