--- a/projectos.html
+++ b/projectos.html
@@ -92,7 +92,7 @@
             <div class="project__title">Estruturas Metálicas</div>
             <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
-              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+              <a class="link__know-more" href="projecto2.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
           </div> 
         </div>  
@@ -102,29 +102,29 @@
             <div class="project__title">Reabilitação Urbana</div>
             <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
-              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+              <a class="link__know-more" href="projecto3.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div> 
           </div> 
         </div>  
       </div> 
       <div class="section__projects">
         <div class="four columns">
-          <div class="project" style="background-image:url(images/house1.jpg);">
+          <div class="project" style="background-image:url(images/building.jpg);">
             <div class="after"></div>
             <div class="project__title">Águas Prediais e Residuais</div>
             <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
-              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+              <a class="link__know-more" href="projecto4.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
           </div>  
         </div>  
         <div class="four columns">
-          <div class="project" style="background-image:url(images/house2.jpg);">
+          <div class="project" style="background-image:url(images/house4.jpg);">
             <div class="after"></div>
             <div class="project__title">AVAC</div>
             <div class="project__location">Porto, Matosinhos</div>
             <div class="project__link">
-              <a class="link__know-more" href="#">saiba mais <span class="icon-arrow-right2"></span></a>
+              <a class="link__know-more" href="projecto5.html">saiba mais <span class="icon-arrow-right2"></span></a>
             </div>  
           </div>
         </div>
