contacts page and mobile menu

--- a/index.html
+++ b/index.html
@@ -39,7 +39,23 @@
 
 <body>
 	<header>
-		<div class="container">
+		<div class="navbar-mobile">
+			<div class="container">
+				<div class="navbar-mobile__nav-toggle js-menu">
+					<span class="navbar-mobile__hamburger"></span>
+					<div class="navbar-mobile__nav-toggle-title">MENU</div>
+				</div>	
+				<div class="navbar-mobile__title">ERGOPROJECT</div>
+				<div class="navbar-mobile__search"><span class="navbar-mobile__search-icon icon-search"></span></div>
+			</div>	
+			<ul class="list list-closed">
+				<li class="list-item"><a class="nav__item" href="organizacao.html">Organização</a></li>
+				<li class="list-item"><a class="nav__item" href="consultoria.html">Consultoria</a></li>
+				<li class="list-item"><a class="nav__item" href="projectos.html">Projectos</a></li>
+				<li class="list-item"><a class="nav__item" href="contactos.html">Contactos</a></li>
+			</ul>	
+		</div>
+		<div class="container desktop-menu">
 			<div class="row">
 				
 				<nav class="navbar">
@@ -64,7 +80,7 @@
 								<a class="nav__item" href="projectos.html">Projectos</a>
 								<a class="nav__item" href="contactos.html">Contactos</a>
 								<div class="nav__item">
-									<input type="text" class="nav__search"><span class="icon-search js-search"></span>
+									<input type="text" class="nav__search"><span class="icon-search desktop-icon-search js-search"></span>
 								</div>
 							</div>
 						</div>
@@ -113,8 +129,8 @@
 			<div class="section__testimonials" id="testimonials">
 				<div class="icon-circle-left icon-left js-left"></div>
 				<div class="testimonial current">
-					&quot;Text text text text text text text text text text text text text text text text text text text text text text text text text text text text &quot;
-					<div class="testimonial-person">Person - 1</div>
+					&quot;A equipa de Projeto efetou um trabalho profissional, com bastante rigor dentro dos prazos, obrigado, bem ajam. &quot;
+					<div class="testimonial-person">João Miranda, Fev 02, 2015</div>
 				</div>
 
 				<div class="testimonial">
