top menu go to home

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<span class="navbar-mobile__hamburger"></span>
 					<div class="navbar-mobile__nav-toggle-title">MENU</div>
 				</div>	
-				<div class="navbar-mobile__title">ERGOPROJECT</div>
+				<div class="navbar-mobile__title"><a href="index.html">ERGOPROJECT</a></div>
 				<div class="navbar-mobile__search"><span class="navbar-mobile__search-icon icon-search"></span></div>
 			</div>	
 			<ul class="list list-closed">
